--- a/pages/404.md
+++ b/pages/404.md
@@ -1,6 +1,10 @@
 ---
-permalink: /404.html
+title: 404 | Page not found
+permalink: /404
 layout: def
+icon: /assets/img/icons/logo.png
+description: Page not found or broken URL
+keywords: blog by redlii, 404 page
 ---
 
 <style type="text/css" media="screen">
@@ -19,7 +23,6 @@ layout: def
 
 <div class="container">
   <h1>404</h1>
-
-  <p><strong>Its not here baby :(</strong></p>
-  <p>pls check url or maybe i removes the page.</p>
+  <p><strong>Page not found:(</strong></p>
+  <p>Page not there or broken link Go to <a class="linkhai" href="/">Home</a> </p>
 </div>
