--- a/_posts/2025-02-07-blog-1.markdown
+++ b/_posts/2025-02-07-blog-1.markdown
@@ -4,7 +4,7 @@ title:  "post secoun!"
 date:   2025-02-07 
 categories: random
 permalink: test2
-cover: "https://img.playbook.com/-fO_M3x_-xvufUWDAYaAky8D2wHclWzbnVvwxdBCI-I/Z3M6Ly9wbGF5Ym9v/ay1hc3NldHMtcHVi/bGljLzk4MzZjN2Nj/LWE3MTEtNDRjZC04/NGE2LWFmYWMzOWQ0/YWE5MA"
+cover: "/assets/img/icons/cover.png"
 ---
 <h1>{{ page.title }}</h1>
 <h3>{{ page.date | date: "%B %d, %Y" }}</h3>
